Fix versioning scheme, update, clean up

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,3 @@
 sources:
-  "pst-bar.doc.tar.xz": e4492a9c9f36e65b285bb12b50519824eff88bd9
-  "pst-bar.source.tar.xz": 9c1498eed4f058000371c55128b67f33943746b3
-  "pst-bar.tar.xz": 6e0dce4a29bfcbdacaaa26d48ec079b5d58e7eb3
+  pst-bar.doc.r64331.tar.xz: 2bad84e01d7c0b4e397978a9b8138612f3834b69
+  pst-bar.r64331.tar.xz: dc38bc423f22aa8db9e8768848d3e40c6cdc3a89
